# science_pub

./: .env.example  .gitignore  README.md  docker-compose.yml
assets/: README.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_review_ready_ru_fields.py
backend/app/: config.py  db.py  dependencies.py  enums.py  main.py
backend/app/api/: collect.py  health.py  jobs.py  papers.py  router.py  score.py
backend/app/models/: __init__.py  base.py  job.py  paper.py
backend/app/providers/: base.py  litellm_provider.py  mock_llm.py  registry.py
backend/app/schemas/: analyze_script.py  common.py  health.py  job.py  paper.py  review_ready.py  scoring.py
backend/app/services/: analyze_script.py  arxiv.py  health.py  jobs.py  llm_scoring.py  papers.py  scoring.py  storage.py
backend/app/workers/: healthcheck.py  queue.py  runner.py  tasks.py
backend/tests/: conftest.py  test_analyze_script.py  test_api.py  test_arxiv.py  test_jobs.py  test_litellm_provider.py  test_llm_scoring.py  test_models.py  test_paper_detail_api.py  test_papers_api.py  test_registry.py  test_score_api.py  test_scoring.py  test_settings.py  test_worker_runner.py
dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
dashboard/src/: App.test.tsx  App.tsx  styles.css
docs/architecture/: database-schema.md  providers.md
docs/decisions/: phase-00-environment.md  (+14 more)
infra/: bootstrap_sci_docker.sh  provision_sci_docker.py
scripts/: init_db.py  test_stack.py
(+36 files in other folders)
